# botanbot_sim

./: .gitmodules  README.md
.github/workflows/: main.yml
Docker/: Dockerfile  docker-compose.yml
botanbot_bringup/: package.xml
botanbot_bringup/launch/: botanbot_simulation.launch.py
botanbot_bringup/params/: localization_params.yaml  params.yaml  robot_localization_params.yaml  vox_nav_container_office_params.yaml  vox_nav_default_params.yaml  vox_nav_uneven_world_params.yaml  xbox.yaml
botanbot_bringup/rviz/: vox_nav_default_view.rviz
botanbot_description/: CMakeLists.txt  package.xml
botanbot_description/meshes/: lidar.stl
botanbot_description/urdf/: botanbot.urdf
botanbot_gazebo/: CMakeLists.txt  package.xml
botanbot_gazebo/include/botanbot_gazebo/: RealSensePlugin.hpp  botanbot_ackermann_drive.hpp  gazebo_ros_gps.hpp  gazebo_ros_imu.hpp  gazebo_ros_realsense.hpp  gazebo_ros_velodyne_laser.hpp  gazebo_to_octomap.hpp  gazebo_to_octomap_common.hpp  gazebo_to_pointcloud.hpp  sensor_model.hpp
botanbot_gazebo/launch/: botanbot_start_selected_gazebo_world.launch.py
botanbot_gazebo/models/botanbot/: model.sdf
botanbot_gazebo/models/full_sensor_suite/: model.sdf
botanbot_gazebo/models/full_sensor_suite/materials/scripts/: script.material
botanbot_gazebo/models/ground_container_office/: model.config  model.sdf
botanbot_gazebo/models/ground_container_office/materials/scripts/: CMakeLists.txt  ground_container_office.material
botanbot_gazebo/models/ground_uneven/: model.config  model.sdf
botanbot_gazebo/models/ground_uneven/materials/scripts/: CMakeLists.txt  ground_uneven.material
botanbot_gazebo/src/: RealSensePlugin.cpp  botanbot_ackermann_drive.cpp  gazebo_ros_gps.cpp  gazebo_ros_imu.cpp  gazebo_ros_realsense.cpp  gazebo_ros_velodyne_laser.cpp  gazebo_to_octomap.cpp  gazebo_to_pointcloud.cpp
botanbot_gazebo/worlds/city_world/: city_world.world
botanbot_gazebo/worlds/container_office_world/: container_office_world.world
botanbot_gazebo/worlds/sonoma_raceway_world/: sonoma_raceway_world.world
botanbot_gazebo/worlds/tomato_field_world/: tomato_field_world.world
botanbot_gazebo/worlds/uneven_world/: uneven_world.world
botanbot_gui/: CMakeLists.txt  package.xml  plugin.xml
botanbot_gui/include/botanbot_gui/: control_plugin.hpp  robot_controller.hpp
botanbot_gui/resources/: control_plugin.ui
botanbot_gui/scripts/: start_selected_gazebo_navigation2.sh  start_selected_gazebo_navigation_full.sh  start_selected_gazebo_standalone.sh  start_selected_gazebo_vox_nav.sh
botanbot_gui/src/: control_plugin.cpp  robot_controller.cpp
botanbot_navigation2/: package.xml
botanbot_navigation2/launch/: botanbot_simulation.launch.py  bringup.launch.py  dual_ekf.launch.py  navigation.launch.py  rviz.launch.py
botanbot_navigation2/params/: dual_ekf.yaml  nav2_params.yaml
docs/: conf.py  index.rst
docs/botanbot_sim/: index.rst
docs/getting_started/: index.rst
docs/running_project/: index.rst
ros2_full_sensor_suite/: CMakeLists.txt  README.md  package.xml
ros2_full_sensor_suite/include/ros2_full_sensor_suite/: gazebo_ros_gps.hpp  gazebo_ros_imu.hpp  gazebo_ros_realsense_camera.hpp  gazebo_ros_velodyne_laser.hpp  realsense_ros_plugin.hpp  sensor_base_attacher_plugin.hpp  sensor_model.hpp
ros2_full_sensor_suite/launch/: test.launch.py
ros2_full_sensor_suite/models/botanbot_simple/: model.sdf
ros2_full_sensor_suite/models/botanbot_simple/materials/: model.config
ros2_full_sensor_suite/models/botanbot_simple/materials/scripts/: script.material
ros2_full_sensor_suite/models/full_sensor_suite/: model.sdf
ros2_full_sensor_suite/src/: gazebo_ros_gps.cpp  gazebo_ros_imu.cpp  gazebo_ros_realsense_camera.cpp  gazebo_ros_velodyne_laser.cpp  realsense_ros_plugin.cpp  sensor_base_attacher_plugin.cpp
ros2_full_sensor_suite/urdf/: test.xacro
ros2_full_sensor_suite/worlds/: test.world
vox_nav_msgs/: package.xml
