<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_full_sensor_suite</name>
  <version>0.0.0</version>
  <description>
    Gazebo simulation package for list of sensors.
  </description>
  <license>Apache 2.0</license>
  <author email="fetullah.atas@nmbu.no">Fetullah Atas</author>
  <maintainer email="fetullah.atas@nmbu.no">Fetullah Atas</maintainer>
  <url type="repository">https://github.com/jediofgever/ros2_full_sensor_suite</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>camera_info_manager</depend>
  <depend>gazebo</depend>
  <depend>gazebo_dev</depend>
  <depend>gazebo_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros_pkgs</depend>
  <depend>geometry_msgs</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>